--- a/index.css
+++ b/index.css
@@ -39,11 +39,16 @@ header{
 }
 
 .btn-primary{
+          color: #FFF;
           border-radius: 8px;
           background: #E55473;
-
           padding: 20px 43px;
+          cursor: pointer;
           
+}
+.btn-primary:hover{
+          background: #9e9294;
+
 }
 .banner div{
           /* width: 50%; */
@@ -55,3 +60,57 @@ header{
           vertical-align: middle;
           width: 100%;
 }
+/* featured section start */
+#featured{
+          margin-top: 130px;
+}
+
+.section-title{
+          color: #272727;
+          text-align: center;
+          font-size: 40px;
+          font-weight: 800;
+ 
+}
+.section-description{
+          color: rgba(39, 39, 39, 0.60);
+          text-align: center;
+          font-size: 18px;
+          font-weight: 400;
+          margin: 30px ;
+          
+}
+
+.flower-container{
+          display: flex;
+          gap: 25px;
+          justify-content: space-between;
+          align-items: end;
+         
+}
+
+.flower-items .flower-images{
+          border-radius: 300px 300px 0px 0px;
+          padding: 30px 15px 0px 15px;
+          height: 400px;
+           display: flex;
+          align-items: end; 
+     
+          
+}
+
+.flower-images img{
+          width:100% ;
+          
+}
+.flower-name{
+          color: #272727;
+          text-align: center;
+          font-size: 20px;
+          font-style: normal;
+          font-weight: 600;
+          text-decoration-line: underline;
+          margin-top: 20px;
+}
+
+
