--- a/index.css
+++ b/index.css
@@ -188,19 +188,47 @@ header{
 
 }
 
+/* .news-latter section */
+.news-latter{
+          margin-top: 110px;
+}
+.news-latter-content{
+          background-image: url('./flower/Rectangle\ 9.png');
+          padding: 100px 0;
+          border-radius: 8px;
 
+          
+}
+.input-content{
+          display: flex;
+          justify-content: center;
+                  
+}
+.input-content input{
+          width: 600px;
+          height: 60px;
+          background-color: #FFFFFF;
+          border-radius: 8px;
+          font-size: 18px;
+          padding: 0 10px;;
+          border: none;
+          margin-right: 10px;
+          outline: none;
+          
+          
+}
 
 
 /* footer section start */
 footer{
-          align-items: center;
+          margin-top: 110px;
           background-color: #111010;
           min-height: 300px;
           
 
 }
 .footer-container{
-          margin: 210px 0;
+          padding: 100px 0;
           background-color:#111010;
           
 }
@@ -215,38 +243,5 @@ footer{
           color: #FFFFFF66;
           text-align: center;
 }
-
-/* .news-latter section */
-.news-latter{
-          margin-top: 110px;
-}
-.news-latter-content{
-          background-image: url('./flower/Rectangle\ 9.png');
-          padding: 110px 0;
-          border-radius: 8px;
-
-          
-}
-.input-content{
-          display: flex;
-          justify-content: center;
-          
-          
-          
-          
-         
-          
-}
-.input-content input{
-          width: 600px;
-          height: 60px;
-          background-color: #FFFFFF;
-          border-radius: 8px;
-          border: none;
-          text-align: center;
-          margin-right: 10px;
-          
-}
-
 
 
